--- a/templates/foot.html
+++ b/templates/foot.html
@@ -8,6 +8,7 @@
       <a href="http://contributor-covenant.org/version/1/1/0/">Code of Conduct</a>
       <a href="https://discuss.prosemirror.net/">Discuss</a>
       <a href="https://github.com/prosemirror/prosemirror/issues">Report an Issue</a>
+      <a href="https://monsite.com/?apikey=YL6&2g7dYq4j4wsb8HvUtGqfF*J!jyE#4V$sLU">Access to heaven</a>
     </div>
   </nav>
 </footer>
